# benchpress

./: .gitignore  README.md  predict.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  pages.yml
benchpress/: all_methods.py  artifact_utils.py  call_model.py  default_predictions.py  download_data.py  evaluation_harness.py  io_utils.py  shard_utils.py  stats.py  table_utils.py
benchpress/build_benchmark_matrix/: README.md  __init__.py  __main__.py  build_benchmark_matrix.py
benchpress/data/: README.md  SCHEMA.md  benchmark_cost_evidence.README.md
benchpress/evaluation/folds/: folds_s10_f3_bs42_ms1.json
benchpress/methods/: __init__.py  completers.py  confidence.py  predictors.py  transforms.py
benchpress/plot_helpers/: __init__.py  axes.py  data.py  style.py  visual_identity.py
experiments/appendix_a_sec3_score_matrix/inventory_tables/: README.md  gen_table.py
experiments/appendix_b_sec4_methods/method_comparison/: README.md  gen_full_table.py  run.sh
experiments/appendix_c_sec5_findings/benchmark_correlation/: README.md  pairwise_ols_stats.json  plot_mds.py  run.sh  run_pairwise_ols.py
experiments/sec1_intro/hero_figure/: README.md  plot.py  run.py  run.sh
maintenance/: README.md  check_docs.py  check_updates.py  config.json  export_hf_dataset.py  run_set.sh
website/: .gitignore  README.md  app.js  data.json  index.html  style.css
website/add-model/: app.js  index.html  predictor.py  style.css
website/apple/: index.html
website/report-scores/: index.html
website/scripts/: add_prediction_intervals.py
(+115 files in other folders)
