[project]
name = "benchpress"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "pandas>=1.3",
    "openpyxl>=3.0",
    "matplotlib>=3.5",
    "adjustText>=1.3",
    "openai>=1.0",
]

[project.optional-dependencies]
hf = ["datasets>=2.0", "huggingface_hub>=0.20", "pyarrow>=10.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["benchpress*"]
